--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="logo">
                     <img src="images/casqueStrom.png" alt=" casque de strom">
 
-                    <h1>Rebels VS Empires</h1>
+                    <h1>Rebels VS Empire</h1>
                 </div>
                 <div class="liste">
                     <ul>
