avancement du projet

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat:wght@100;500&family=Poppins&display=swap"
         rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat:wght@100;500&family=Playpen+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
+
     <title>Star wars</title>
 </head>
 
@@ -22,14 +26,12 @@
 
                     <h1>Rebels VS Empire</h1>
                 </div>
-                <div class="liste">
                     <ul>
                         <li>Sith</li>
                         <li>Jedi</li>
                         <li>Rebels</li>
                         <li>Empire</li>
                     </ul>
-                </div>
             </div>
         </nav>
     </header>
