--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat:wght@100;500&family=Playpen+Sans:wght@300&family=Poppins&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat:wght@100;500&family=Playpen+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Star wars</title>
 </head>
 
@@ -35,7 +31,6 @@
                         <div class="ulprincipale1">
                             <ul>
                                 <li><a href="https://fr.wikipedia.org/wiki/Sith" target="_blank">Sith</a></li>
-                                </a>
                             </ul>
                         </div>
                         <div class="ulfirst">
@@ -50,6 +45,7 @@
                         <div class="ulprincipale2">
                             <ul>
                                 <li><a href="https://fr.wikipedia.org/wiki/Jedi" target="_blank">Jedi</a></li>
+                            </ul>
                         </div>
                         <div class="ulfirst">
                             <ul>
@@ -92,14 +88,12 @@
         </nav>
     </header>
     <main>
-        <section>
             <div class="perso">
                 <img src="images/perso-1.png" alt="Personnage de star wars 1">
                 <img src="images/perso-2.png" alt="Personnage de star wars 2">
                 <img src="images/perso-3.png" alt="Personnage de star wars 3">
                 <img src="images/perso-5.png" alt="Personnage de star wars 4">
             </div>
-        </section>
         <div class="text">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam delectus consequuntur distinctio ad,
                 qui,
@@ -107,7 +101,6 @@
                 Quos,
                 temporibus obcaecati!</p>
         </div>
-        <section>
             <div class="menu">
                 <div class="welcome">
                     <h2>WELCOME</h2>
@@ -134,13 +127,12 @@
                     <h2>FLEXIBLE PAGES</h2>
                     <p>lorem ipsum dolor amet</p>
                     <iframe width="500" height="300" src="https://www.youtube.com/embed/6JX5OW8cOec?si=5WE8BTTL7w8rhccn"
-                        title="YouTube video player" frameborder="0"
+                        title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen>
                     </iframe>
                 </div>
             </div>
-        </section>
     </main>
     <footer>
         <section class="fin">
@@ -182,5 +174,4 @@
         </section>
     </footer>
 </body>
-
 </html>
