--- a/index.html
+++ b/index.html
@@ -12,88 +12,88 @@
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat:wght@100;500&family=Playpen+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat:wght@100;500&family=Playpen+Sans:wght@300&family=Poppins&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Star wars</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="entete">
-                <div class="logo">
-                    <img src="images/casqueStrom.png" alt=" casque de strom">
-
-                    <h1>Rebels VS Empire</h1>
+    <div class="entete">
+        <div class="logo">
+            <img src="images/casqueStrom.png" alt=" casque de strom">
+            <h1>Rebels VS Empire</h1>
+        </div>
+        <nav class="listes">
+                <div>
+                    <ul  class="ulprincipale1">
+                        <li><a href="https://fr.wikipedia.org/wiki/Sith" target="_blank">Sith</a></li>
+                    </ul>
+                    <div class="ulfirst">
+                        <ul>
+                            <li>Menu style</li>
+                            <li>Sliders</li>
+                            <li>More Deatures</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="listes">
-                    <div>
-                        <div class="ulprincipale1">
-                            <ul>
-                                <li><a href="https://fr.wikipedia.org/wiki/Sith" target="_blank">Sith</a></li>
-                            </ul>
-                        </div>
-                        <div class="ulfirst">
-                            <ul>
-                                <li>Menu style</li>
-                                <li>Sliders</li>
-                                <li>More Deatures</li>
-                            </ul>
-                        </div>
+                <div>
+                    <div class="ulprincipale2">
+                        <ul>
+                            <li><a href="https://fr.wikipedia.org/wiki/Jedi" target="_blank">Jedi</a></li>
+                        </ul>
                     </div>
-                    <div>
-                        <div class="ulprincipale2">
-                            <ul>
-                                <li><a href="https://fr.wikipedia.org/wiki/Jedi" target="_blank">Jedi</a></li>
-                            </ul>
-                        </div>
-                        <div class="ulfirst">
-                            <ul>
-                                <li>About Us</li>
-                                <li>Contact Us</li>
-                                <li>Custom Pages</li>
-                            </ul>
-                        </div>
+                    <div class="ulfirst">
+                        <ul>
+                            <li>About Us</li>
+                            <li>Contact Us</li>
+                            <li>Custom Pages</li>
+                        </ul>
                     </div>
-                    <div>
-                        <div class="ulprincipale3">
-                            <ul>
-                                <li><a href="https://fr.wikipedia.org/wiki/Alliance_rebelle" target="_blank">Rebels</a></li>
-                            </ul>
-                        </div>
-                        <div class="ulfirst">
-                            <ul>
-                                <li>Two columns</li>
-                                <li>Three columns</li>
-                                <li>More Layout</li>
-                            </ul>
-                        </div>
+                </div>
+                <div>
+                    <div class="ulprincipale3">
+                        <ul>
+                            <li><a href="https://fr.wikipedia.org/wiki/Alliance_rebelle" target="_blank">Rebels</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div>
-                        <div class="ulprincipale4">
-                            <ul>
-                                <li><a href="https://fr.wikipedia.org/wiki/Empire_galactique_(Star_Wars)" target="_blank">Empire</a></li>
-                            </ul>
-                        </div>
-                        <div class="ulfirst">
-                            <ul>
-                                <li>Product Category 1</li>
-                                <li>Product Category 2</li>
-                                <li>Custom Templates</li>
-                            </ul>
-                        </div>
+                    <div class="ulfirst">
+                        <ul>
+                            <li>Two columns</li>
+                            <li>Three columns</li>
+                            <li>More Layout</li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <div class="ulprincipale4">
+                        <ul>
+                            <li><a href="https://fr.wikipedia.org/wiki/Empire_galactique_(Star_Wars)"
+                                    target="_blank">Empire</a></li>
+                        </ul>
+                    </div>
+                    <div class="ulfirst">
+                        <ul>
+                            <li>Product Category 1</li>
+                            <li>Product Category 2</li>
+                            <li>Custom Templates</li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </nav>
-    </header>
+    </div>
+    </nav>
     <main>
-            <div class="perso">
-                <img src="images/perso-1.png" alt="Personnage de star wars 1">
-                <img src="images/perso-2.png" alt="Personnage de star wars 2">
-                <img src="images/perso-3.png" alt="Personnage de star wars 3">
-                <img src="images/perso-5.png" alt="Personnage de star wars 4">
-            </div>
+        <div class="perso">
+            <img src="images/perso-1.png" alt="Personnage de star wars 1">
+            <img src="images/perso-2.png" alt="Personnage de star wars 2">
+            <img src="images/perso-3.png" alt="Personnage de star wars 3">
+            <img src="images/perso-5.png" alt="Personnage de star wars 4">
+        </div>
         <div class="text">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam delectus consequuntur distinctio ad,
                 qui,
@@ -101,38 +101,34 @@
                 Quos,
                 temporibus obcaecati!</p>
         </div>
-            <div class="menu">
-                <div class="welcome">
-                    <h2>WELCOME</h2>
-                    <p>Lorem ipsum dolor sit amet</p>
-                    <img src="images/miniaturePerso.png" alt="personnages star wars mini">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas aut est nulla eos eaque numquam
-                        ipsam!</p>
-                    <a href="#">read more</a>
-                </div>
-
-                <div class="work-products">
-                    <div class="work">
-                        <h2>LASTEST WORK</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, pariatur. Maiores iusto
-                            vel.</p>
-                    </div>
-                    <div class="products">
-                        <h2>OUR PRODUCTS</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, pariatur. Maiores iusto
-                            vel.</p>
-                    </div>
-                </div>
-                <div class="flexible">
-                    <h2>FLEXIBLE PAGES</h2>
-                    <p>lorem ipsum dolor amet</p>
-                    <iframe width="500" height="300" src="https://www.youtube.com/embed/6JX5OW8cOec?si=5WE8BTTL7w8rhccn"
-                        title="YouTube video player"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen>
-                    </iframe>
-                </div>
+        <div class="gridprincipale">
+            <div class="grid1">
+                <h1>WELCOME</h1>
+                <p class="p1">Lorem ipsum dolor sit amet</p>
+                <img src="images/miniaturePerso.png" alt="personnages star wars mini">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas aut est nulla eos eaque numquam
+                    ipsam!</p>
+                <a href="#">read more</a>
             </div>
+            <div class="grid2">
+                <h2>LASTEST WORK</h2>
+                <p class="p1">Lorem ipsum dolor sit amet</p><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, fuga odit blanditiis laudantium sint eaque libero perferendis veritatis earum aspernatur, consequatur tempore! Voluptate praesentium cumque illum eaque exercitationem, reprehenderit animi!</p>
+            </div>
+            <div class="grid3">
+                <h3>OUR PRODUCTS</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, pariatur. Maiores iusto
+                    vel.</p>
+            </div>
+            <div class="grid4">
+                <h4>FLEXIBLE PAGES</h4>
+                <p>lorem ipsum dolor amet</p>
+                <iframe width="500" height="300" src="https://www.youtube.com/embed/6JX5OW8cOec?si=5WE8BTTL7w8rhccn"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                </iframe>
+            </div>
+        </div>
     </main>
     <footer>
         <section class="fin">
@@ -145,10 +141,7 @@
             </div>
             <div class="where">
                 <h2>WHERE FIND US</h2>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d47908.13652009874!2d5.601092772131216!3d43.18813683899137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1699544841060!5m2!1sfr!2sfr"
-                    width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d47908.13652009874!2d5.601092772131216!3d43.18813683899137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1699544841060!5m2!1sfr!2sfr" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="us">
                 <h2>CONTACT US</h2>
@@ -174,4 +167,5 @@
         </section>
     </footer>
 </body>
+
 </html>
