debut finition site

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="perso">
             <img src="images/perso-1.png" alt="Personnage de star wars 1">
             <img src="images/perso-2.png" alt="Personnage de star wars 2">
-            <img src="images/perso-3.png" alt="Personnage de star wars 3">
+            <img src="images/perso-3.png" alt="Personnage de star wars 3">  
             <img src="images/perso-5.png" alt="Personnage de star wars 4">
         </div>
         <div class="text">
@@ -112,17 +112,18 @@
             </div>
             <div class="grid2">
                 <h2>LASTEST WORK</h2>
-                <p class="p1">Lorem ipsum dolor sit amet</p><br>
+                <p class="p1">Lorem ipsum dolor sit amet</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, fuga odit blanditiis laudantium sint eaque libero perferendis veritatis earum aspernatur, consequatur tempore! Voluptate praesentium cumque illum eaque exercitationem, reprehenderit animi!</p>
             </div>
             <div class="grid3">
                 <h3>OUR PRODUCTS</h3>
+                <p class="p1">lorem ipsum dolor amet</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, pariatur. Maiores iusto
                     vel.</p>
             </div>
             <div class="grid4">
                 <h4>FLEXIBLE PAGES</h4>
-                <p>lorem ipsum dolor amet</p>
+                <p class="p1">lorem ipsum dolor amet</p>
                 <iframe width="500" height="300" src="https://www.youtube.com/embed/6JX5OW8cOec?si=5WE8BTTL7w8rhccn"
                     title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
@@ -141,7 +142,7 @@
             </div>
             <div class="where">
                 <h2>WHERE FIND US</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d47908.13652009874!2d5.601092772131216!3d43.18813683899137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1699544841060!5m2!1sfr!2sfr" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d47908.13652009874!2d5.601092772131216!3d43.18813683899137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1699544841060!5m2!1sfr!2sfr" width="350" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="us">
                 <h2>CONTACT US</h2>
@@ -149,11 +150,11 @@
                     <div class="email-textarea">
                         <div class="email">
                             <label for="email">Your Email</label>
-                            <input type="email" name="email" id="email" required>
+                            <input type="email" name="email" id="email" placeholder="Your name..." required>
                         </div>
                         <div class="textarea">
                             <label for="text">Subject</label>
-                            <textarea name="text" id="text" cols="30" rows="3" required></textarea>
+                            <textarea name="text" id="text" cols="30" rows="3" required>write something...</textarea>
                         </div>
                     </div>
                     <input type="submit" value="submit">
