ajout responsive design portable

--- a/index.html
+++ b/index.html
@@ -28,70 +28,69 @@
             <h1>Rebels VS Empire</h1>
         </div>
         <nav class="listes">
-                <div>
-                    <ul  class="ulprincipale1">
-                        <li><a href="https://fr.wikipedia.org/wiki/Sith" target="_blank">Sith</a></li>
+            <div>
+                <ul class="ulprincipale1">
+                    <li><a href="https://fr.wikipedia.org/wiki/Sith" target="_blank">Sith</a></li>
+                </ul>
+                <div class="ulfirst">
+                    <ul>
+                        <li>Menu style</li>
+                        <li>Sliders</li>
+                        <li>More Deatures</li>
                     </ul>
-                    <div class="ulfirst">
-                        <ul>
-                            <li>Menu style</li>
-                            <li>Sliders</li>
-                            <li>More Deatures</li>
-                        </ul>
-                    </div>
-                </div>
-                <div>
-                    <div class="ulprincipale2">
-                        <ul>
-                            <li><a href="https://fr.wikipedia.org/wiki/Jedi" target="_blank">Jedi</a></li>
-                        </ul>
-                    </div>
-                    <div class="ulfirst">
-                        <ul>
-                            <li>About Us</li>
-                            <li>Contact Us</li>
-                            <li>Custom Pages</li>
-                        </ul>
-                    </div>
-                </div>
-                <div>
-                    <div class="ulprincipale3">
-                        <ul>
-                            <li><a href="https://fr.wikipedia.org/wiki/Alliance_rebelle" target="_blank">Rebels</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="ulfirst">
-                        <ul>
-                            <li>Two columns</li>
-                            <li>Three columns</li>
-                            <li>More Layout</li>
-                        </ul>
-                    </div>
-                </div>
-                <div>
-                    <div class="ulprincipale4">
-                        <ul>
-                            <li><a href="https://fr.wikipedia.org/wiki/Empire_galactique_(Star_Wars)"
-                                    target="_blank">Empire</a></li>
-                        </ul>
-                    </div>
-                    <div class="ulfirst">
-                        <ul>
-                            <li>Product Category 1</li>
-                            <li>Product Category 2</li>
-                            <li>Custom Templates</li>
-                        </ul>
-                    </div>
                 </div>
             </div>
+            <div>
+                <div class="ulprincipale2">
+                    <ul>
+                        <li><a href="https://fr.wikipedia.org/wiki/Jedi" target="_blank">Jedi</a></li>
+                    </ul>
+                </div>
+                <div class="ulfirst">
+                    <ul>
+                        <li>About Us</li>
+                        <li>Contact Us</li>
+                        <li>Custom Pages</li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <div class="ulprincipale3">
+                    <ul>
+                        <li><a href="https://fr.wikipedia.org/wiki/Alliance_rebelle" target="_blank">Rebels</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="ulfirst">
+                    <ul>
+                        <li>Two columns</li>
+                        <li>Three columns</li>
+                        <li>More Layout</li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <div class="ulprincipale4">
+                    <ul>
+                        <li><a href="https://fr.wikipedia.org/wiki/Empire_galactique_(Star_Wars)"
+                                target="_blank">Empire</a></li>
+                    </ul>
+                </div>
+                <div class="ulfirst">
+                    <ul>
+                        <li>Product Category 1</li>
+                        <li>Product Category 2</li>
+                        <li>Custom Templates</li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
-    </nav>
     <main>
         <div class="perso">
             <img src="images/perso-1.png" alt="Personnage de star wars 1">
             <img src="images/perso-2.png" alt="Personnage de star wars 2">
-            <img src="images/perso-3.png" alt="Personnage de star wars 3">  
+            <img src="images/perso-3.png" alt="Personnage de star wars 3">
             <img src="images/perso-5.png" alt="Personnage de star wars 4">
         </div>
         <div class="text">
@@ -113,7 +112,9 @@
             <div class="grid2">
                 <h2>LASTEST WORK</h2>
                 <p class="p1">Lorem ipsum dolor sit amet</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, fuga odit blanditiis laudantium sint eaque libero perferendis veritatis earum aspernatur, consequatur tempore! Voluptate praesentium cumque illum eaque exercitationem, reprehenderit animi!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, fuga odit blanditiis laudantium
+                    sint eaque libero perferendis veritatis earum aspernatur, consequatur tempore! Voluptate praesentium
+                    cumque illum eaque exercitationem, reprehenderit animi!</p>
             </div>
             <div class="grid3">
                 <h3>OUR PRODUCTS</h3>
@@ -124,10 +125,12 @@
             <div class="grid4">
                 <h4>FLEXIBLE PAGES</h4>
                 <p class="p1">lorem ipsum dolor amet</p>
-                <iframe width="500" height="300" src="https://www.youtube.com/embed/6JX5OW8cOec?si=5WE8BTTL7w8rhccn"
+                <div class="container"><iframe class="responsive-iframe" width="500" height="300" src="https://www.youtube.com/embed/6JX5OW8cOec?si=5WE8BTTL7w8rhccn"
                     title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-                </iframe>
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen>
+                </iframe></div>
+                
             </div>
         </div>
     </main>
@@ -142,7 +145,10 @@
             </div>
             <div class="where">
                 <h2>WHERE FIND US</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d47908.13652009874!2d5.601092772131216!3d43.18813683899137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1699544841060!5m2!1sfr!2sfr" width="350" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d47908.13652009874!2d5.601092772131216!3d43.18813683899137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1699544841060!5m2!1sfr!2sfr"
+                    width="350" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="us">
                 <h2>CONTACT US</h2>
